<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        
        <EditText
            android:id="@+id/oldPay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/oldPay"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="6"
            />

        <EditText
            android:id="@+id/newPay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/newPay"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="6"
            />

        <EditText
            android:id="@+id/confirmPay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/confirmPay"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="6"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/change_sub"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="     Confirm     "
            android:layout_gravity="center_horizontal"
            android:onClick="changePaywordCommit"/>
    </LinearLayout>
</RelativeLayout>