<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/light_grey">

    <LinearLayout
        android:id="@+id/register_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_weight="0.30">
            <FrameLayout
                android:id="@+id/reg_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:inputType="number"
                    android:paddingRight="60dp"
                    android:maxLength="20"
                    android:paddingLeft="55dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:hint="@string/reg_phone">
                </EditText>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@drawable/phone"
                    android:visibility="visible" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/reg_passwd_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_phone_layout"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"
                    android:paddingRight="60dp"
                    android:maxLength="20"
                    android:paddingLeft="55dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:hint="@string/reg_passwd">
                </EditText>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@drawable/lock"
                    android:visibility="visible" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/reg_confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_passwd_layout"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/confirm"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"
                    android:paddingRight="60dp"
                    android:maxLength="20"
                    android:paddingLeft="55dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:hint="@string/reg_confirm">
                </EditText>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@drawable/lock"
                    android:visibility="visible" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/reg_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_confirm_layout"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:paddingRight="60dp"
                    android:maxLength="20"
                    android:paddingLeft="55dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:hint="@string/reg_username">
                </EditText>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@drawable/person"
                    android:visibility="visible" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/reg_pay_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_username_layout"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <EditText
                    android:id="@+id/payword"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:inputType="numberPassword"
                    android:paddingRight="60dp"
                    android:maxLength="6"
                    android:paddingLeft="55dp"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:hint="@string/reg_pay">
                </EditText>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@drawable/key"
                    android:visibility="visible" />
            </FrameLayout>
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_sub"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="     Register     "
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:onClick="register"/>
    </LinearLayout>

</RelativeLayout>